--- a/helm/argocd/kustomization.yml
+++ b/helm/argocd/kustomization.yml
@@ -6,7 +6,7 @@ resources:
   - repository.yml
   - release.yml
   - ingress.yml
-  - application.yml
+  # - application.yml
 configMapGenerator:
   - name: argocd-values
     files:
